--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <button onclick="sortBy('speechiness')">Speechiness</button>
     <button onclick="sortBy('tempo')">Tempo</button>
     <button onclick="sortBy('valence')">Valence</button>
+    Reverse?
+    <input id="songReverse" type="checkbox">
   </div>
   <div id="OwnerButtons">
     Sort Owners By:
